# path-tracer

./: .gitignore  CMakeLists.txt  README.md  floor.ppm  main.cpp  render.ppm
include/: baseMaterial.hpp  brdf.hpp  camera.hpp  core.hpp  directionalLight.hpp  ellipse.hpp  environmentMap.hpp  lambertBrdf.hpp  light.hpp  object.hpp  plane.hpp  pointLight.hpp  rectangle.hpp  renderer.hpp  scene.hpp  solidMaterial.hpp  sphere.hpp  texture.hpp  texturedMaterial.hpp  utils.hpp  vector.hpp
src/: brdf.cpp  camera.cpp  directionalLight.cpp  ellipse.cpp  environmentMap.cpp  lambertBrdf.cpp  main.cpp  object.cpp  plane.cpp  pointLight.cpp  rectangle.cpp  renderer.cpp  scene.cpp  solidMaterial.cpp  sphere.cpp  texture.cpp  texturedMaterial.cpp  utils.cpp  vector.cpp
textures/: uv.ppm
